[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "01_1"
path = "src/01_1.rs"

[[bin]]
name = "01_2"
path = "src/01_2.rs"

[[bin]]
name = "02_1"
path = "src/02_1.rs"

[[bin]]
name = "02_2"
path = "src/02_2.rs"

[[bin]]
name = "03_1"
path = "src/03_1.rs"

[[bin]]
name = "03_2"
path = "src/03_2.rs"

[[bin]]
name = "04_1"
path = "src/04_1.rs"

[[bin]]
name = "04_2"
path = "src/04_2.rs"

[[bin]]
name = "05_1"
path = "src/05_1.rs"

[[bin]]
name = "05_2"
path = "src/05_2.rs"

[[bin]]
name = "06_1"
path = "src/06_1.rs"

[[bin]]
name = "06_2"
path = "src/06_2.rs"

[[bin]]
name = "07_1"
path = "src/07_1.rs"

[[bin]]
name = "07_2"
path = "src/07_2.rs"

[dependencies]
image = "0.24.7"
itertools = "0.12.0"
rand = "0.8.5"
rusttype = "0.9.3"
speedy2d = "2.0.0"
